--- a/index.html
+++ b/index.html
@@ -5,19 +5,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css">
     <link rel="shortcut icon" href="./assets/imag/logo1.jpeg" type="image/x-icon">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/estilos.css">
     <title>Canario Pet Shop</title>
 </head>
 
 <body>
     <!-- inicio header -->
-    <header>
-        <h1>Canario Pet Shop</h1>
-        <h2>Tienda para mascotas</h2>
-        <div class="logo__flex">
-            <a href="index.html"><img src="./assets/imag/logo1.jpeg" alt=logo></a>
+    <header class="conteiner-fluid">
+        
+            <h1 class="text-center text-uppercase mt-4">Canario Pet Shop</h1>
+            <h2 class="text-center">Tienda para mascotas</h2>
+    
+        <div class="row">
+            <div class="logo__flex col-sm-12 my-1">
+                <a href="index.html"><img src="./assets/imag/logo1.jpeg" alt=logo></a>
+            </div>
         </div>
 
         <nav class="nav__flex">
@@ -64,11 +70,23 @@
             </div>
             <div>
                 <h4>Redes Sociales</h4>
-                <p>
-                    Facebook
-                    Twitter
-                    Instagram
-                </p>
+                <ul class="mt-4 list unstyled">
+                    <li class="list-inline-item">
+                        <a href="">
+                            <i class="fab fa-facebook-f"></i>
+                        </a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a href="">
+                            <i class="fab fa-instagram"></i>
+                        </a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a href="">
+                            <i class="fab fa-twitter"></i>
+                        </a>
+                    </li>
+                </ul>
             </div>
             <div>
                 <h4>Medios de pago</h4>
@@ -83,7 +101,9 @@
         </div>
     </footer>
     <!-- fin de footer -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous">
+    </script>
 </body>
 
 </html>
