--- a/index.html
+++ b/index.html
@@ -9,31 +9,42 @@
     <link rel="shortcut icon" href="./assets/imag/logo1.jpeg" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="./css/estilos.css">
+
     <title>Canario Pet Shop</title>
 </head>
 
 <body>
     <!-- inicio header -->
-    <header class="conteiner-fluid">
-        
-            <h1 class="text-center text-uppercase mt-4">Canario Pet Shop</h1>
-            <h2 class="text-center">Tienda para mascotas</h2>
-    
+    <header class="container-fluid">
+        <h1 class="text-center text-uppercase mt-4">Canario Pet Shop</h1>
+        <h2 class="text-center">Tienda para mascotas</h2>
+
         <div class="row">
             <div class="logo__flex col-sm-12 my-1">
                 <a href="index.html"><img src="./assets/imag/logo1.jpeg" alt=logo></a>
             </div>
         </div>
 
-        <nav class="nav__flex">
-            <ul>
-                <li><a href="index.html"></a>INICIO</li>
-                <li><a href="./views/nosotros.html">NOSOTROS</a></li>
-                <li><a href="./views/productos.html">PRODUCTOS</a></li>
-                <li><a href="./views/servicios.html">SERVICIOS</a></li>
-                <li><a href="./views/contacto.html">CONTACTO</a></li>
-            </ul>
+        <nav class="navbar navbar-expand-lg bg-light">
+            <div class="container-fluid">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                    <div class="navbar-nav">
+                        <a class="navbar-brand" href="./index.html">INICIO</a>
+                        <a class="nav-link" aria-current="page" href="./views/nosotros.html">NOSOTROS</a>
+                        <a class="nav-link" href="./views/productos.html">PRODUCTOS</a>
+                        <a class="nav-link" href="./views/servicios.html">SERVICIOS</a>
+                        <a class="nav-link" href="./views/contacto.html">CONTACTO</a>
+                    </div>
+                </div>
+                <div class="carrito"><i class="bi bi-cart4"></i></div>
+            </div>
         </nav>
 
     </header>
@@ -41,20 +52,31 @@
     <!-- inicio de main -->
     <main>
         <div class="portada">
-            <img src="./assets/imag/iniziative.jpg" alt="">
-        </div>
-        <section class="contenedor__flex">
-            <div class="portadaText">
-                <p>En Canario Pet Shop ofrecemos una experiencia cómoda en las compras para tus mascotas. Podes
-                    comprar las
-                    24hs desde tu smart phone o compu a tan solo un click. Porque amamos a los animales tanto como
-                    vos,
-                    ponemos a tu alcance todo lo que tu fiel amigo necesita, haciéndote ahorrar tiempo para que
-                    compartas
-                    con él lo que más le gusta: tu compañía.
-                </p>
+            <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel" data-interval="1000">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="./assets/imag/iniziative.jpg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="./assets/imag/portada2.jpg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="./assets/imag/portada3.jpg" class="d-block w-100" alt="...">
+                    </div>
+                </div>
             </div>
-        </section>
+
+            <section class="contenedor__flex">
+                <div class="portadaText">
+                    <h2 class="tituloportada"> Encontrá todo para tu mascota...</h2>
+                    <p>En Canario Pet Shop ofrecemos una experiencia cómoda en las compras para tus mascotas. Podes
+                        comprar las 24hs desde tu smart phone o compu a tan solo un click. Porque amamos a los animales
+                        tanto como
+                        vos, ponemos a tu alcance todo lo que tu fiel amigo necesita, haciéndote ahorrar tiempo para que
+                        compartas con él lo que más le gusta: tu compañía.
+                    </p>
+                </div>
+            </section>
 
     </main>
     <!-- fin de main -->
@@ -63,10 +85,9 @@
         <div class="footer__flex">
             <div>
                 <h4>Contactanos</h4>
-                <p> Wsp: 5493513845741</p>
-                <p>Telefono: 5493513845741</p>
-                <p>Direccion: Av. La Cordillera 3946</p>
-                <p>E-mail:tiendaonline@canariopetshop.com</p>
+                <p><i class="bi bi-whatsapp">+5493513845741</i></p>
+                <p><i class="bi bi-geo-alt">Av. La Cordillera 3946</i></p>
+                <p><i class="bi bi-envelope">tiendaonline@canariopetshop.com</i></p>
             </div>
             <div>
                 <h4>Redes Sociales</h4>
@@ -84,14 +105,38 @@
                     <li class="list-inline-item">
                         <a href="">
                             <i class="fab fa-twitter"></i>
+
                         </a>
+                    </li>
+                </ul>
             </div>
             <div>
                 <h4>Medios de pago</h4>
-                <p>Visa
-                    Mastercard
-                    Transferencia
-                    Mercado Pago</p>
+                <ul class="mt-4 list unstyled">
+                    <li class="list-inline-item">
+                        <a href="">
+                            <i class="fab fa-cc-visa"></i>
+                        </a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a href="">
+                            <i class="fab fa-cc-mastercard"></i>
+                        </a>
+
+                    </li>
+
+                    <li class="list-inline-item">
+                        <a href="">
+                            <i class="fab fa-cc-amex"></i>
+                        </a>
+                    </li>
+
+                    <li class="list-inline-item">
+                        <a href="">
+                            <i class="fab fa-cc-paypal"></i>
+                        </a>
+                    </li>
+                </ul>
             </div>
         </div>
         <div class="footer__creditos">
