--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css">
-    <link rel="shortcut icon" href="./assets/imag/logo1.jpeg" type="image/x-icon">
+    <meta name="keywords" content="petshop cordoba,mascotas, alimentos para mascotas">
+    <meta name="description" content="Encontrá en Canario los mejores productos y servicios para mascotas. Comprá online alimentos, accesorios y más.">
+    <link rel="shortcut icon" href="./assets/imag/logo.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css">
     <link rel="stylesheet" href="./css/estilos.css">
 
     <title>Canario Pet Shop</title>
@@ -52,13 +54,13 @@
             <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel" data-interval="1000">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="./assets/imag/iniziative.jpg" class="d-block w-100" alt="...">
+                        <img src="./assets/imag/perrosaltando.jpg" class="d-block w-100" alt="imgportada1">
                     </div>
                     <div class="carousel-item">
-                        <img src="./assets/imag/portada2.jpg" class="d-block w-100" alt="...">
+                        <img src="./assets/imag/gatoo.jpg" class="d-block w-100" alt="imgportada2">
                     </div>
                     <div class="carousel-item">
-                        <img src="./assets/imag/portada3.jpg" class="d-block w-100" alt="...">
+                        <img src="./assets/imag/cachorros.jpg" class="d-block w-100" alt="imgportada3">
                     </div>
                 </div>
             </div>
